--- a/CERAMIC_TILES.html
+++ b/CERAMIC_TILES.html
@@ -40,11 +40,11 @@ wall tiles floor tiles gvt double charge bathroom tiles kitchen tiles 2 by 2 2x2
         <div class="menu-logo">
             <div class="navbar-brand">
                 <span class="navbar-logo">
-                    <a href="https://a2zconstructo.com">
+                    <a href="http://a2zconstructo.com">
                          <img src="assets/images/flush-1-122x158.jpg" alt="Mobirise" title="" style="height: 3.8rem;">
                     </a>
                 </span>
-                <span class="navbar-caption-wrap"><a class="navbar-caption text-white display-4" href="https://a2zconstructo.com">A2ZCONSTRUCTO</a></span>
+                <span class="navbar-caption-wrap"><a class="navbar-caption text-white display-4" href="http://a2zconstructo.com">A2ZCONSTRUCTO</a></span>
             </div>
         </div>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
@@ -62,7 +62,7 @@ wall tiles floor tiles gvt double charge bathroom tiles kitchen tiles 2 by 2 2x2
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.ws/g">create free website</a></section><section class="mbr-section content5 cid-qRfUHiPGBH" id="content5-1q">
+<section class="engine"><a href="https://mobirise.ws/f">simple web builder</a></section><section class="mbr-section content5 cid-qRfUHiPGBH" id="content5-1q">
 
     
 
