--- a/Modular_Kitchen.html
+++ b/Modular_Kitchen.html
@@ -44,11 +44,11 @@ place of supply includes dehradun, Haridwar, Rishikesh, Uttarkashi, Roorkie, har
         <div class="menu-logo">
             <div class="navbar-brand">
                 <span class="navbar-logo">
-                    <a href="https://a2zconstructo.com">
+                    <a href="http://a2zconstructo.com">
                          <img src="assets/images/flush-1-122x158.jpg" alt="Mobirise" title="" style="height: 3.8rem;">
                     </a>
                 </span>
-                <span class="navbar-caption-wrap"><a class="navbar-caption text-white display-4" href="https://a2zconstructo.com">A2ZCONSTRUCTO</a></span>
+                <span class="navbar-caption-wrap"><a class="navbar-caption text-white display-4" href="http://a2zconstructo.com">A2ZCONSTRUCTO</a></span>
             </div>
         </div>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
@@ -66,7 +66,7 @@ place of supply includes dehradun, Haridwar, Rishikesh, Uttarkashi, Roorkie, har
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.ws/k">how to develop your own website</a></section><section class="mbr-section content5 cid-qRgbXgnSCH mbr-parallax-background" id="content5-1r">
+<section class="engine"><a href="https://mobirise.ws/o">mobile website builder</a></section><section class="mbr-section content5 cid-qRgbXgnSCH mbr-parallax-background" id="content5-1r">
 
     
 
