--- a/Sunmica_Laminates.html
+++ b/Sunmica_Laminates.html
@@ -41,11 +41,11 @@ place of supply includes dehradun, Haridwar, Rishikesh, Uttarkashi, Roorkie, har
         <div class="menu-logo">
             <div class="navbar-brand">
                 <span class="navbar-logo">
-                    <a href="https://a2zconstructo.com">
+                    <a href="http://a2zconstructo.com">
                          <img src="assets/images/flush-1-122x158.jpg" alt="Mobirise" title="" style="height: 3.8rem;">
                     </a>
                 </span>
-                <span class="navbar-caption-wrap"><a class="navbar-caption text-white display-4" href="https://a2zconstructo.com">A2ZCONSTRUCTO</a></span>
+                <span class="navbar-caption-wrap"><a class="navbar-caption text-white display-4" href="http://a2zconstructo.com">A2ZCONSTRUCTO</a></span>
             </div>
         </div>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
@@ -63,7 +63,7 @@ place of supply includes dehradun, Haridwar, Rishikesh, Uttarkashi, Roorkie, har
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.ws/l">html site creator</a></section><section class="features3 cid-qR4T8SEgjg" id="features3-1b">
+<section class="engine"><a href="https://mobirise.ws/c">best free web site maker</a></section><section class="features3 cid-qR4T8SEgjg" id="features3-1b">
 
     
 
