--- a/Aluminium_Partition_Panels.html
+++ b/Aluminium_Partition_Panels.html
@@ -43,11 +43,11 @@ place of supply includes dehradun, Haridwar, Rishikesh, Uttarkashi, Roorkie, har
         <div class="menu-logo">
             <div class="navbar-brand">
                 <span class="navbar-logo">
-                    <a href="https://a2zconstructo.com">
+                    <a href="http://a2zconstructo.com">
                          <img src="assets/images/flush-1-122x158.jpg" alt="Mobirise" title="" style="height: 3.8rem;">
                     </a>
                 </span>
-                <span class="navbar-caption-wrap"><a class="navbar-caption text-white display-4" href="https://a2zconstructo.com">A2ZCONSTRUCTO</a></span>
+                <span class="navbar-caption-wrap"><a class="navbar-caption text-white display-4" href="http://a2zconstructo.com">A2ZCONSTRUCTO</a></span>
             </div>
         </div>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
@@ -65,7 +65,7 @@ place of supply includes dehradun, Haridwar, Rishikesh, Uttarkashi, Roorkie, har
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.ws/n">best website builder app</a></section><section class="mbr-section content5 cid-qRfyigqfK7 mbr-parallax-background" id="content5-1n">
+<section class="engine"><a href="https://mobirise.ws/l">html website creator</a></section><section class="mbr-section content5 cid-qRfyigqfK7 mbr-parallax-background" id="content5-1n">
 
     
 
