--- a/Doors.html
+++ b/Doors.html
@@ -40,11 +40,11 @@ Global Traders Manvi Timber Wood India A2zconstructo Dehradun   Uttarakhand Indi
         <div class="menu-logo">
             <div class="navbar-brand">
                 <span class="navbar-logo">
-                    <a href="https://a2zconstructo.com">
+                    <a href="http://a2zconstructo.com">
                          <img src="assets/images/flush-1-122x158.jpg" alt="Mobirise" title="" style="height: 3.8rem;">
                     </a>
                 </span>
-                <span class="navbar-caption-wrap"><a class="navbar-caption text-white display-4" href="https://a2zconstructo.com">A2ZCONSTRUCTO</a></span>
+                <span class="navbar-caption-wrap"><a class="navbar-caption text-white display-4" href="http://a2zconstructo.com">A2ZCONSTRUCTO</a></span>
             </div>
         </div>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
@@ -62,7 +62,7 @@ Global Traders Manvi Timber Wood India A2zconstructo Dehradun   Uttarakhand Indi
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.ws/c">best free site maker</a></section><section class="mbr-gallery mbr-slider-carousel cid-qQYyOLYfWD" id="gallery2-13">
+<section class="engine"><a href="https://mobirise.ws/k">how to develop own website</a></section><section class="mbr-gallery mbr-slider-carousel cid-qQYyOLYfWD" id="gallery2-13">
 
     
 
