--- a/Indian_timber.html
+++ b/Indian_timber.html
@@ -40,11 +40,11 @@ place of supply includes dehradun, Haridwar, Rishikesh, Uttarkashi, Roorkie, har
         <div class="menu-logo">
             <div class="navbar-brand">
                 <span class="navbar-logo">
-                    <a href="https://a2zconstructo.com">
+                    <a href="http://a2zconstructo.com">
                          <img src="assets/images/flush-1-122x158.jpg" alt="Mobirise" title="" style="height: 3.8rem;">
                     </a>
                 </span>
-                <span class="navbar-caption-wrap"><a class="navbar-caption text-white display-4" href="https://a2zconstructo.com">A2ZCONSTRUCTO</a></span>
+                <span class="navbar-caption-wrap"><a class="navbar-caption text-white display-4" href="http://a2zconstructo.com">A2ZCONSTRUCTO</a></span>
             </div>
         </div>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
@@ -62,7 +62,7 @@ place of supply includes dehradun, Haridwar, Rishikesh, Uttarkashi, Roorkie, har
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.ws/m">drag and drop site maker</a></section><section class="features15 cid-qQYsWSIwbR mbr-parallax-background" id="features15-z">
+<section class="engine"><a href="https://mobirise.ws/g">create free website</a></section><section class="features15 cid-qQYsWSIwbR mbr-parallax-background" id="features15-z">
 
     
 
